Refactor GitHub API client error handling and remove unused code